# Time-stamp: <2013-08-03 16:44:34 ben>
# ,----------------------------------------------------------------------.
# |                                                                      |
# |   libc68 -- Makefile.am -- Use with automake to produce Makefile.in  | 
# |                                                                      |
# |                 (C) 2007-2013 Benjamin Gerard                        |
# |                                                                      |
# |             <http://sourceforge.net/users/benjihan>                  |
# |                                                                      |
# `----------------------------------------------------------------------'
# @configure_input@

#ACLOCAL_AMFLAGS = -I m4 --install
EXTRA_LTLIBRARIES = libc68.la
libc68_la_SOURCES = basename.c strtoul.c
noinst_HEADERS    = libc68.h
